Bug 14368158 - CONNECTIONS CREATED IN MYSQL FOR EXCEL UNUSABLE IN WORKBENCH
- Renamed MySQLForExcelConnectionsFile class and file to MySQLForExcelConnectionsHelper (Classes\MySQLForExcelConnectionsHelper.cs, MySQL.ForExcel.csproj).
- Refactored the MySQLForExcelConnectionsHelper class to wrap all connections loading, connections saving and connections deleting functionality, detecting if Workbench 5.2.42 or later is installed to use the Workbench connections file, otherwise using a local connections file within MySQL for Excel (Classes\MySQLForExcelConnectionsHelper.cs).
- Added a new element to the InfoType enumerator for Information dialogs and modified the constructor accordingly (Forms\InfoDialog.cs, Forms\InfoDialog.resx).
- Changed code in the newConnectionLabel_Click, deleteToolStripMenuItem_Click and LoadConnections methods to call methods within the MySQLForExcelConnectionsHelper class to save, delete and get connections accordingly. Added code to the constructor to disable the Manage Connections action label if Workbench is not installed or if version 5.2.41 or earlier is installed. (Panels\WelcomePanel.cs).
- Added some string resources for messages. (Properties\Resources.Designer.cs, Properties\Resources.resx).
- Added code in the ThisAddIn_Startup method to call the new MigrateConnectionsFromMySQLForExcelToWorkbench method of the MySQLForExcelConnectionsHelper class to attempt to migrate connections on startup if the proper conditions are met. (ThisAddIn.cs).
- Refreshed the MySQL.Utility.dll file with a new version that handles connections in the Workbench connections file and on the MySQL for Excel local connections file (libraries\MySQL.Utility.dll).

--- a/CHANGES
+++ b/CHANGES
@@ -1,14 +1,16 @@
 1.0.7
+- Manage Connections action label is available in the Welcome Panel when MySQL Workbench 5.2.42 is installed.
+  Database connections are shared with MySQL Workbench if version 5.2.42 or later is installed (meaning they are read from and saved to the Workbench connections file and on the
+  first run of MySQL for Excel it will attempt to migrate all local connections to the Workbench connection file and delete the local connections file, otherwise they are still
+  managed locally within MySQL for Excel. (Oracle bug 14368158 - CONNECTIONS CREATED IN MYSQL FOR EXCEL UNUSABLE IN WORKBENCH)
 - Refactoring on TransparentPictureBox control to fix some flickering when resizing the Excel form.
   Added an upperPanel that contains all controls above the MyTreeView controls to all panels so when the form is resized to have a very small size the controls at the bottom
   actually go behind the new upperPanel so there is no overlapping at all. (Oracle bug 14406412 - OVERLAPPING CONTROLS ON ALL PANELS WHEN EXCEL WINDOW IS SMALL).
 - Removed the code that reset the TaskPaneControl's height since the height can't be changed for a right-docking of the panel.
   (Oracle bug 14369568 - EXCEL WINDOW CAN'T BE RESIZED IF STARTS WITH A SMALL SIZE).
-- Added back in the Welcome Panel the Manage Connections action label. (Oracle bug 14368158 - CONNECTIONS CREATED IN MYSQL FOR EXCEL UNUSABLE IN WORKBENCH).
 - Fixed code in custom PreviewDataViewGrid control to readjust the recalculation of the headers width when the HeaderText changes and to disable the AutoWidth feature of each
   column header when the automatically recalculated width exceeds the ColumnsMaximumWidth property. (Oracle Bug 14350168 - EXPORT DATA DIALOG'S PREVIEW GRID TRUNCATES COLUMN NAMES)
 - Fixed code so now "text" columns can be automatically mapped to set or enum columns.
   Fixed code to properly change mapped column names when checking/unchecking the "First Row Contains Column Names" checkbox in the Append Data Form.
   (Oracle Bug 14370049 - THE AUTO MAPPING IS NOT WORKING PROPERLY)
 - Disabled Export button when table name is empty (Oracle Bug 14389853 - EXPORT BUTTON IS ENABLED WHEN TABLE NAME IS EMPTY)
-- Fix for Bug #14368158 - Connections created in MySQL For Excel unusable in Workbench.
