Internal Bug - Export excel data to a new table not working
- Added back the hook on events for controls placed inside the upperPanel since the hook was lost as part of fix of bug 14406412, also modified the upperPanel anchor. (Panels\DBObjectSelectionPanel.Designer.cs, Panels\DBObjectSelectionPanel.resx, Panels\SchemaSelectionPanel.Designer.cs, Panels\SchemaSelectionPanel.resx, Panels\WelcomePanel.Designer.cs, Panels\WelcomePanel.resx).
- Modified the fixed width of the TaskPaneControl to 266 since 6 pixels were being lost somehow. (ThisAddIn.cs).

--- a/source/Panels/SchemaSelectionPanel.resx
+++ b/source/Panels/SchemaSelectionPanel.resx
@@ -124,58 +124,58 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADO
-        CwAAAk1TRnQBSQFMAwEBAAEYAQEBGAEBARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC8
+        CwAAAk1TRnQBSQFMAwEBAAE4AQEBOAEBARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
         ARgDAAEBAQABIAYAASQ2AAMBBAIEAwEEAwUBBwMFAQcDBAEFAwMBBAMDAQQDAQEC/wBRAAMBAQIDBgEI
         AwoEDgETAxEBFwMUARsDFgEfAxYBHgMUARsDEQEXAw4BEwMLAQ8DBwEJAwIBA/8ARQADBAEFAxUBHQMo
-        ATwBPwJAAW4BTQJOAZYBUgJWAbABVQFiAWcBzgFQAWMBbQHYAVMBWQFbAboBUgFTAVUBqAFFAkYBfwM5
-        AV8DJQE3Ax0BKQMPARQDBgEIAwEBAv8AOQADBQEHATUCNgFYAU0BeAGAAeIBNAGkAcUB/wFjAbYBzgH/
-        AY4ByQHcAf8BlwHQAeIB/wGHAcsB4AH/AW8BxwHdAf8BXgHCAdsB/wFJAbkB1wH/AS4BpAHFAf8BGAGM
-        AbEB/wEeAXwBoQH6AVACUQGiAygBPQMUARsDBgEI/wA5AANBAXIBMAGuAdAB/wGHAdYB6wH/AdgB+AL/
-        AfUD/wHvAf0C/wHeAfkC/wHIAfQC/wGuAfAB/gH/AZUB6gH9Af8BeAHmAf0B/wFlAeQB/QH/AWEB4wL/
-        AXoB2gHyAf8BUwGpAccB/wFSAWABZQHQAisBLAFDAwkBDP8AOQABNAGYAbcB+QGAAd4B9wH/AbIB8gL/
-        AdIB9QL/AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wF1AeMB+wH/
-        AWEB3wH6Af8BWgHdAfoB/wGYAewC/wG9AfAB/gH/ATkBsQHbAf8DRwGDAwYBCP8AOQABQQGiAbsB+QGQ
-        AeoC/wGsAe4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7
-        Af8BdQHjAfsB/wFhAd8B+gH/AVoB3QH6Af8BkgHoAfwB/wHEAfcC/wFLAcEB7AH/A0cBgwMGAQj/ADkA
-        AT8BoQG4AfcBjQHoAv8BrAHuAv8B0gH1Av8B7AH7Av8B6QH6Af4B/wHdAfkC/wHIAfQC/wGuAfAB/gH/
-        AZUB6gH9Af8BdgHkAfwB/wFhAd8B+gH/AVoB3QH6Af8BkgHoAfwB/wHCAfUC/wFJAcEB6wH/A0cBggMG
-        AQj/ADkAAUABoQG4AfcBjQHoAv8BrgHvAv8B3QH7Bv8B/AP/AdcB9QH8Af8BtwHqAfcB/wGhAecB9wH/
-        AYkB4gH2Af8BegHoAv8BawHpAv8BYQHlAv8BlgHsAv8BwgH1Av8BSQHBAewB/wNGAYEDBQEH/wA5AAE8
-        AaUBvwH6AZUB7gL/AaUB6gH8Af8BgwHNAeEB/wFVAbMBzgH/AT0BpgHDAf8BQgGoAcQB/wFFAakBxgH/
-        ATwBpgHEAf8BLgGfAb4B/wEbAZEBtAH/ARgBkQG1Af8BJQGjAcYB/wF1AdEB6AH/Ac4B/gL/AU4BxAHu
-        Af8DRQF/AwIBA/8AOQABVAFtAXMB2AFCAboB2gH/AT8BswHRAf8BcwHHAd4B/wGqAdsB6QH/AbIB3gHq
-        Af8BrAHeAewB/wGgAd0B7QH/AYwB2QHrAf8BcQHSAekB/wFXAccB4wH/AUYBwwHgAf8BNQGzAdMB/wEv
-        AZ0BvgH/ATUBlwG2Af8BKwGYAcEB/gM/AW0DAwEE/wA5AAFUAWQBaAHLAUgBvgHdAf8BmQHjAfYB/wHL
-        AfIB/AH/AfAB/QL/AfID/wHhAfsC/wHJAfUC/wGwAfEC/wGWAesB/gH/AXkB5wH+Af8BZAHjAf0B/wFZ
-        AdwB+QH/AYcB4AH1Af8BdQHBAdkB/wEjAY0BrQH5Az0BaQMHAQn/ADkAAUEBlQGqAfMBiAHkAf0B/wGu
-        Ae8C/wHTAfYC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BdQHj
-        AfsB/wFhAd8B+gH/AVoB3QH6Af8BlQHqAf0B/wHAAfMC/wFCAbsB5gH/A0YBgAMGAQj/ADkAAUkBpAG+
-        AfcBjQHoAv8BrAHuAv8B0gH1Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGS
-        AegB+wH/AXUB4wH7Af8BYQHfAfoB/wFaAd0B+gH/AZIB6AH8Af8BwgH1Av8BSAHDAe4B/wNHAYIDBgEI
-        /wA5AAFKAaUBvgH3AYwB6AL/AawB7gL/AdQB9gL/AfEB/QL/AfAB/QL/AeEB+gL/AcoB9QL/AbAB8QH+
-        Af8BlgHrAf0B/wF5AeYB/gH/AWQB4gH8Af8BWwHeAfsB/wGSAegB/AH/AcIB9QL/AUkBxAHuAf8DRwGC
-        AwYBCP8AOQABSwGmAb4B9wGOAekC/wGyAfEC/wHPAfQB/gH/AdEB7gH2Af8BwAHnAfEB/wGvAeIB7wH/
-        AZ0B3QHuAf8BiQHZAewB/wFwAdMB6gH/AVoBzgHqAf8BTAHNAeoB/wFSAdYB9AH/AZcB7AL/AckB+QL/
-        AUkBxAHvAf8DRwGCAwYBCP8AOQABTAGnAcAB9wGEAeQB/AH/AYMB2QHwAf8BkAHYAesB/wGEAdAB5AH/
-        AXIBygHhAf8BaQHFAd0B/wFlAcIB3AH/AWMBwAHaAf8BXgG9AdgB/wFRAbkB1wH/AUgBtgHWAf8BQAG5
-        AdoB/wFhAcYB4AH/AZ8B3wHwAf8BSwHGAfAB/wNHAYIDBgEI/wA5AAFEAaQBvgH3AWEBzwHrAf8BdAHQ
-        AegB/wGIAdYB7QH/AakB5gH4Af8BvwHxAv8BwwHzAv8BwgHzAv8BuwHwAv8BswHuAv8BqgHrAv8BlQHi
-        Af0B/wFpAcsB6wH/AVcBugHaAf8BXQG7AdsB/wEsAa4B2QH/A0cBggMGAQj/ADkAAUQBqwHAAfkBmQHf
-        AfIB/wHCAfEC/wHAAfEC/wG7Ae4B/gH/AbkB7QH9Af8BtwHtAf0B/wGwAesB/QH/AagB6AH9Af8BngHk
-        Af0B/wGRAeEB/QH/AY0B4AH+Af8BlgHkAv8BqQHsAv8BpQHkAfgB/wFKAbkB3QH/A0YBgAMCAQP/ADkA
-        AUIBvwHfAf8BxgHyAv8BugHuAf0B/wG4Ae0B/QH/AbkB7QH9Af8BuAHtAf0B/wGxAesB/QH/AagB6AH9
-        Af8BnQHkAf0B/wGUAeEB/QH/AZIB4QH+Af8BnAHiAf4B/wGpAecB/gH/AbcB6wL/AdkB/AL/AYQB1gHy
-        Af8DRAF6/wA9AAFFAkYBfwFnAcwB5gH/AbQB6wH7Af8BwQHxAv8BuwHuAf4B/wGzAewB/gH/AakB6AH9
-        Af8BngHlAf0B/wGVAeEB/QH/AZQB4gH+Af8BnQHkAv8BqQHnAv8BvAHuAv8BywHyAv8BmAHSAecB/wFY
-        AWMBZwHIAxoBJP8APQADBAEGAzIBUQFMAZEBogHvAWAByAHjAf8BiAHXAe4B/wGRAd0B9AH/AZQB3wH4
-        Af8BlQHiAf4B/wGUAeIC/wGSAeAB/QH/AYcB1wHzAf8BhAHSAewB/wFmAcAB3AH/AT4BrgHRAf8BTwJQ
-        AZoDEQEX/wBJAAMNARIDFgEeATwCPQFnAVMBVgFXAasBVgFkAWkBzAFRAXUBfwHgAU4BdgGEAeMBUgFt
-        AXIB1gFWAVsBXQG4AkoBSwGMAyQBNQMQARUDBgEI/wD/ALYAAUIBTQE+BwABPgMAASgDAAFgAwABGAMA
-        AQEBAAEBBQABIAEBFgAD/wEAAf8BgAE/CQAB/AEAAQ8JAAH4AQABAwkAAfABAAEDCQAB8AEAAQMJAAHw
-        AQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAED
-        CQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQcJAAHw
-        AQABBwkAAfABAAEPCQAB/AEAAR8JAAP/CQAL
+        ATwBPwJAAW4BTQJOAZYBUwJVAbABWwJeAc4BWgFeAV8B2AFVAlcBugFSAlMBqAFFAkYBfwM5AV8DJQE3
+        Ax0BKQMPARQDBgEIAwEBAv8AOQADBQEHATUCNgFYAVcBaAFqAeIBMAGkAcUB/wFfAbYBzgH/AY4ByQHc
+        Af8BlwHQAeIB/wGHAcsB4AH/AWsBxwHdAf8BWgHCAdsB/wFFAbkB1wH/ASoBpAHFAf8BFAGMAbEB/wEi
+        AXgBmQH6A1EBogMoAT0DFAEbAwYBCP8AOQADQQFyASwBrgHQAf8BhwHWAesB/wHYAfgC/wH1A/8B7wH9
+        Av8B3gH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AXQB5gH9Af8BYQHkAf0B/wFdAeMC/wF2AdoB8gH/
+        AU8BqQHHAf8BWwJeAdACKwEsAUMDCQEM/wA5AAE8AY4BqgH5AYAB3gH3Af8BsgHyAv8B0gH1Av8B7AH7
+        Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AXEB4wH7Af8BXQHfAfoB/wFW
+        Ad0B+gH/AZgB7AL/Ab0B8AH+Af8BNQGxAdsB/wNHAYMDBgEI/wA5AAFBAZIBrQH5AZAB6gL/AawB7gL/
+        AdIB9QL/AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wFxAeMB+wH/
+        AV0B3wH6Af8BVgHdAfoB/wGSAegB/AH/AcQB9wL/AUcBwQHsAf8DRwGDAwYBCP8AOQABRgGSAaQB9wGN
+        AegC/wGsAe4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/Ad0B+QL/AcgB9AL/Aa4B8AH+Af8BlQHqAf0B/wFy
+        AeQB/AH/AV0B3wH6Af8BVgHdAfoB/wGSAegB/AH/AcIB9QL/AUUBwQHrAf8DRwGCAwYBCP8AOQABSAGS
+        AaQB9wGNAegC/wGuAe8C/wHdAfsG/wH8A/8B1wH1AfwB/wG3AeoB9wH/AaEB5wH3Af8BiQHiAfYB/wF2
+        AegC/wFnAekC/wFdAeUC/wGWAewC/wHCAfUC/wFFAcEB7AH/A0YBgQMFAQf/ADkAAUABnQGtAfoBlQHu
+        Av8BpQHqAfwB/wGDAc0B4QH/AVEBswHOAf8BOQGmAcMB/wE+AagBxAH/AUEBqQHGAf8BOAGmAcQB/wEq
+        AZ8BvgH/ARcBkQG0Af8BFAGRAbUB/wEhAaMBxgH/AXEB0QHoAf8BzgH+Av8BSgHEAe4B/wNFAX8DAgED
+        /wA5AAFaAV8BYQHYAT4BugHaAf8BOwGzAdEB/wFvAccB3gH/AaoB2wHpAf8BsgHeAeoB/wGsAd4B7AH/
+        AaAB3QHtAf8BjAHZAesB/wFtAdIB6QH/AVMBxwHjAf8BQgHDAeAB/wExAbMB0wH/ASsBnQG+Af8BMQGX
+        AbYB/wErAZABuQH+Az8BbQMDAQT/ADkAAVgBWwFdAcsBRAG+Ad0B/wGZAeMB9gH/AcsB8gH8Af8B8AH9
+        Av8B8gP/AeEB+wL/AckB9QL/AbAB8QL/AZYB6wH+Af8BdQHnAf4B/wFgAeMB/QH/AVUB3AH5Af8BhwHg
+        AfUB/wFxAcEB2QH/AScBiQGeAfkDPQFpAwcBCf8AOQABTAGEAZMB8wGIAeQB/QH/Aa4B7wL/AdMB9gL/
+        AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wFxAeMB+wH/AV0B3wH6
+        Af8BVgHdAfoB/wGVAeoB/QH/AcAB8wL/AT4BuwHmAf8DRgGAAwYBCP8AOQABUQGWAagB9wGNAegC/wGs
+        Ae4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BcQHj
+        AfsB/wFdAd8B+gH/AVYB3QH6Af8BkgHoAfwB/wHCAfUC/wFEAcMB7gH/A0cBggMGAQj/ADkAAVEBlwGo
+        AfcBjAHoAv8BrAHuAv8B1AH2Av8B8QH9Av8B8AH9Av8B4QH6Av8BygH1Av8BsAHxAf4B/wGWAesB/QH/
+        AXUB5gH+Af8BYAHiAfwB/wFXAd4B+wH/AZIB6AH8Af8BwgH1Av8BRQHEAe4B/wNHAYIDBgEI/wA5AAFR
+        AZkBqAH3AY4B6QL/AbIB8QL/Ac8B9AH+Af8B0QHuAfYB/wHAAecB8QH/Aa8B4gHvAf8BnQHdAe4B/wGJ
+        AdkB7AH/AWwB0wHqAf8BVgHOAeoB/wFIAc0B6gH/AU4B1gH0Af8BlwHsAv8ByQH5Av8BRQHEAe8B/wNH
+        AYIDBgEI/wA5AAFRAZoBqwH3AYQB5AH8Af8BgwHZAfAB/wGQAdgB6wH/AYQB0AHkAf8BbgHKAeEB/wFl
+        AcUB3QH/AWEBwgHcAf8BXwHAAdoB/wFaAb0B2AH/AU0BuQHXAf8BRAG2AdYB/wE8AbkB2gH/AV0BxgHg
+        Af8BnwHfAfAB/wFHAcYB8AH/A0cBggMGAQj/ADkAAUwBlgGoAfcBXQHPAesB/wFwAdAB6AH/AYgB1gHt
+        Af8BqQHmAfgB/wG/AfEC/wHDAfMC/wHCAfMC/wG7AfAC/wGzAe4C/wGqAesC/wGVAeIB/QH/AWUBywHr
+        Af8BUwG6AdoB/wFZAbsB2wH/ASgBrgHZAf8DRwGCAwYBCP8AOQABRAGcAbAB+QGZAd8B8gH/AcIB8QL/
+        AcAB8QL/AbsB7gH+Af8BuQHtAf0B/wG3Ae0B/QH/AbAB6wH9Af8BqAHoAf0B/wGeAeQB/QH/AZEB4QH9
+        Af8BjQHgAf4B/wGWAeQC/wGpAewC/wGlAeQB+AH/AUYBuQHdAf8DRgGAAwIBA/8AOQABPgG/Ad8B/wHG
+        AfIC/wG6Ae4B/QH/AbgB7QH9Af8BuQHtAf0B/wG4Ae0B/QH/AbEB6wH9Af8BqAHoAf0B/wGdAeQB/QH/
+        AZQB4QH9Af8BkgHhAf4B/wGcAeIB/gH/AakB5wH+Af8BtwHrAv8B2QH8Av8BhAHWAfIB/wNEAXr/AD0A
+        AUUCRgF/AWMBzAHmAf8BtAHrAfsB/wHBAfEC/wG7Ae4B/gH/AbMB7AH+Af8BqQHoAf0B/wGeAeUB/QH/
+        AZUB4QH9Af8BlAHiAf4B/wGdAeQC/wGpAecC/wG8Ae4C/wHLAfIC/wGYAdIB5wH/AVsBXAFdAcgDGgEk
+        /wA9AAMEAQYDMgFRAVABfgGGAe8BXAHIAeMB/wGIAdcB7gH/AZEB3QH0Af8BlAHfAfgB/wGVAeIB/gH/
+        AZQB4gL/AZIB4AH9Af8BhwHXAfMB/wGEAdIB7AH/AWIBwAHcAf8BOgGuAdEB/wNQAZoDEQEX/wBJAAMN
+        ARIDFgEeATwCPQFnAVQCVgGrAVkBXAFeAcwBWgFmAWsB4AFYAWYBbQHjAVoBYAFiAdYBVgJXAbgDSgGM
+        AyQBNQMQARUDBgEI/wD/ALYAAUIBTQE+BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEA
+        Af8BgAE/CQAB/AEAAQ8JAAH4AQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEA
+        AQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkA
+        AfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQcJAAHwAQABBwkAAfABAAEPCQAB/AEA
+        AR8JAAP/CQAL
 </value>
   </data>
   <metadata name="contextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
