--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 1.0.7
+- Changed code to conditionally detect the datatype of a column with no data in any of its cells as either a Varchar(255) when Exporting data (empty column falls back to a "safe"
+  type that user can override) or as a null/empty datatype when Appending data so the empty column can be automatically mapped to any other column regardless of the target's
+  column datatype. (Internal bug 35 - Append Data detects a column with no data as a varchar column which does not map to any column).
 - Updated code so that when Workbench version 5.2.41 or earlier is installed and there are still no connections created in MySQL for Excel the Workbench connections are copied
-  from Workbench to the MySQL for Excel connections file. (Internal bug - Workbench connections are not copied to MySql for Excel).
+  from Workbench to the MySQL for Excel connections file. (Internal bug 49 - Workbench connections are not copied to MySql for Excel).
 - Updated version in AssemblyInfo to 1.0.7.
 - Manage Connections action label is available in the Welcome Panel when MySQL Workbench 5.2.42 is installed.
   Database connections are shared with MySQL Workbench if version 5.2.42 or later is installed (meaning they are read from and saved to the Workbench connections file and on the
