Oracle bug 14355970 - CONFIRMATION DETAILS LIE ABOUT SQL ISSUED
- Removed the InsertDataWithAdapter, UpdateDataWithAdapter and DeleteDataWithAdapter methods since they are not used anymore. Refactored code in GetInsertSQL to prepare it for inserting new rows on Edit Data operations. Added AcceptChanges when query is committed on InsertDataWithManualQuery, UpdateDataWithManualQuery, DeleteDataWithManualQuery methods. Changed code in GetUpdateSQL and GetDeleteSQL methods to make sure we pass a formatted value to the where clause and to split the query into chunks the same way it is done in the GetInsertSQL method. Added UpdateDataWithManualQuery and DeleteDataWithManualQuery methods to replace the Adapter ones. (Classes\MySQLDataTable.cs).
- Changed code in pushDataChanges method to use the new InsertDataWithManualQuery, DeleteDataWithManualQuery and UpdateDataWithManualQuery methods instead of the InsertDataWithAdapter, UpdateDataWithAdapter and DeleteDataWithAdapter ones and refactored code that assembles the Operation Text. Changed code in lockRange, changeExcelCellsColor and revertDataChanges methods to change the cells interior to an empty fill instead of filing them with a white background when reverting data or unlocking a range. (Forms\EditDataDialog.cs).
- Added back the Edit Table Data action label. (Panels\DBObjectSelectionPanel.Designer.cs, Panels\DBObjectSelectionPanel.resx).

--- a/CHANGES
+++ b/CHANGES
@@ -1,1 +1,4 @@
-1.1.0
+- All operations done through Edit Data use now constructed queries sent directly to MySQL instead of performing the operations via the Connector/NET DataAdapter.
+  This way we are consistent on how operations are performed by the Export Data and Append Data operations and ensure the query appearing on the General Query Log
+  and the one we display to the users are identical. (Oracle bug 14355970 - CONFIRMATION DETAILS LIE ABOUT SQL ISSUED).
+  
