Oracle bug 14349192 - COMMIT FAILS
- Edit Data was failing in this scenario when a table's primary key is being changed by the user. Fixed code in GetUpdateSQL to assemble the where clause using the original values in the row and not the updated values (since updated values in this scenario are not found but MySQL does not throw any errors or warnings about not finding such records). (Classes\MySQLDataTable.cs).
- Added EMPTY_DATE constant to DataTypeUtilities class, refactored parameter name for GetInsertingValueForColumnType method to againstTypeColumn to make the intention of the parameter clearer. Added GetStringValueForColumn method to always convert the value in an Excel cell to its string counterpart that can be used in SQL queries, this is now used to construct the WHERE clauses of Insert, Delete and Update statements passing the converted Key column values. (Classes\Utilities.cs).
- Made changes to GetAppendSQL, GetDeleteSQL, GetInsertSQL and GetUpdateSQL methods to use the new GetStringValueForColumn method described above. (Classes\MySQLDataTable.cs).

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+- Edit Data was failing in this scenario when a table's primary key is being changed by the user. Fixed code in GetUpdateSQL method of MySQLDataTable class to assemble
+  the where clause using the original values in the row and not the updated values (since updated values in this scenario are not found but MySQL does not throw any
+  errors or warnings about not finding such records). (Oracle bug 14349192 - COMMIT FAILS).
+- Methods that handle Insert, Update and Delete operations (InsertDataWithManualQuery, AppendDataWithManualQuery, UpdateDataWithManualQuery, DeleteDataWithManualQuery)
+  are using transactions which are rolled back if an error occurs. (Oracle bug 14356054 - OPTIMISTIC LOCKING CAN CAUSE PARTIAL DATA UPDATES)
 - All operations done through Edit Data use now constructed queries sent directly to MySQL instead of performing the operations via the Connector/NET DataAdapter.
   This way we are consistent on how operations are performed by the Export Data and Append Data operations and ensure the query appearing on the General Query Log
   and the one we display to the users are identical. (Oracle bug 14355970 - CONFIRMATION DETAILS LIE ABOUT SQL ISSUED).
