--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+- Changed code to enable Revert Changes button when the Auto-Commit checkbox is not checked and only when there are changes pending to be committed.
+  (Internal bug 92 - Edit Data, Revert Changes button remains enabled even if there are no changes to revert).
 - Added code to reset all cells in the Editing Region to have a NO-FILL style when the Edit Data dialog is closed.
   (Internal bug 70 - Committed/uncommitted cells remain colored when exiting Edit Data Mode).
 - Added code to enable rows deletion on Edit Data, before all cells except the ones containing MySQL data were locked, but that way users can't delete an Excel row
